--- a/media.css
+++ b/media.css
@@ -106,7 +106,7 @@
 @media (max-width: 767px) {
 
   .home__background {
-    background-image: url(img/fondo.jpg);
+    background-image: url(img/logo.png);
     
     background-attachment: fixed;
     background-size: cover;
