--- a/media.css
+++ b/media.css
@@ -108,9 +108,8 @@
   .home__background {
     background-image: url(img/fondo2.jpg);
     
-    background-attachment: fixed;
     background-size: cover;
-    background-position: center;
+    object-fit: contain;
   
   }
 
