--- a/media.css
+++ b/media.css
@@ -110,7 +110,8 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-  
+    width: 100%;
+    height: 100%;
   }
 
   .portfolio__img {
