--- a/media.css
+++ b/media.css
@@ -106,12 +106,13 @@
 @media (max-width: 767px) {
 
   .home__background {
+    display: flex;
     background-image: url(img/fondo2.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 100%;
+    object-fit: contain;
+   
   }
 
   .portfolio__img {
