--- a/media.css
+++ b/media.css
@@ -118,7 +118,7 @@
     background-size: cover;
     background-position: center;
     object-fit: contain;
-    height: 100%;
+    height: 900px;
     width: 100%;
    
   }
