background mobile OK

--- a/media.css
+++ b/media.css
@@ -113,7 +113,7 @@
   .home__background {
    
     background-image: url(img/fondo2.jpg);
-    background-attachment: fixed;
+    background-attachment: initial;
     background-size: cover;
     background-position: center;
   }
