--- a/styles.css
+++ b/styles.css
@@ -148,14 +148,15 @@ section {
 
 .section__title {
   color: var(--grey);
-  font-size: 30px;
+  font-size: 25px;
   margin-bottom: 30px;
   display: flex;
+  justify-content: center;
 }
 
 .section__subtitle {
   color: var(--grey);
-  text-align: start;
+  text-align: center;
   margin-bottom: 20px;
 }
 
@@ -166,10 +167,21 @@ section {
 }
 
 .about__description {
-  text-align: left;
+  text-align: center;
   color: var(--grey);
-  padding-right: 80px;
   line-height: 40px;
+}
+
+.about__logo{
+  width: 100%;
+  height: 60px;
+  justify-content: center;
+}
+
+
+.about__logo img{
+  width: 150px;
+  height: 60px;
 }
 
 .about__summary {
@@ -400,11 +412,11 @@ section {
   margin-top: 20px;
   font: bold;
   border-radius: 2px;
-  display: flex;
+  display: inline-flex;
   width: 150px;
   justify-content: center;
   align-items: center;
-  position: relative;
+  
 
 }
 
@@ -422,6 +434,7 @@ section {
 
 .contact__grid {
   display: flex;
+  justify-content: center;
 }
 
 .contact__item {
