--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ section {
   display: flex;
   border-radius: 10px;
 }
-
+/*
 .button {
   background: #191919;
   color: #f5f5f5;
@@ -431,7 +431,7 @@ section {
 .button .fa-github:before {
   color: white;
 }
-
+*/
 .contact__grid {
   display: flex;
   justify-content: center;
@@ -474,4 +474,31 @@ section {
 
 .footer a:hover {
   color: var(--blue);
+}
+
+
+/* From uiverse.io */
+button {
+  margin-top: 20px;
+  padding: 1.3em 3em;
+  font-size: 16px;
+  color: #000;
+  background-color: var(--blueReact);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+button:hover {
+  background-color: #fff;
+  box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.52);
+  color: #000;
+  transform: translateY(-5px);
+}
+
+button:active {
+  transform: translateY(-1px);
 }
