--- a/styles.css
+++ b/styles.css
@@ -479,23 +479,24 @@ section {
 
 /* From uiverse.io */
 button {
-  margin-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   padding: 1.3em 3em;
   font-size: 16px;
   color: #000;
-  background-color: var(--blueReact);
+  background-color: #fff;
   border: none;
   border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 8px -4px rgba(0,0,0,0.75);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
 
 button:hover {
-  background-color: #fff;
+  background-color: var(--blueReact);
   box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.52);
-  color: #000;
+  color: #fff;
   transform: translateY(-5px);
 }
 
