--- a/styles.css
+++ b/styles.css
@@ -493,11 +493,15 @@ button {
 
 button:hover {
   background-color: var(--blueReact);
-  box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.52);
+  /*box-shadow: 0px 0px 22px -5px rgba(0,0,0,0.52);*/
   color: #fff;
   transform: translateY(-5px);
 }
 
 button:active {
   transform: translateY(-1px);
+}
+
+#insta {
+  margin-left: 20px;
 }
