--- a/media.css
+++ b/media.css
@@ -1,7 +1,5 @@
 @media (max-width: 991px) {
 
-
-
   .navbar__menu {
     display: flex;
   }
@@ -118,6 +116,11 @@
     background-position: center;
   }
 
+  .home__description{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
   .about__grid{
     font-size: 14px;
   }
@@ -174,8 +177,7 @@
     gap: 20px;
     font-size: 14px;
   }
-
-
+  
   .contact__grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
@@ -188,3 +190,5 @@
     transition: all 0.3s;
   }
 }
+
+
