--- a/media.css
+++ b/media.css
@@ -1,5 +1,4 @@
 @media (max-width: 991px) {
-
   .navbar__menu {
     display: flex;
   }
@@ -21,7 +20,6 @@
   .iframe {
     display: none;
   }
-
 
   .visible {
     display: flex;
@@ -67,7 +65,6 @@
   }
 
   .section__subtitle {
-    
     font-weight: normal;
   }
 
@@ -107,26 +104,24 @@
 }
 
 @media (max-width: 767px) {
-
-  .home{
+  .home {
     width: 100%;
     height: 100vh;
   }
-  
+
   .home__background {
-   
-    background-image: url(img/fondo3.jpg);
+    background-image: url(img/fondo3.png);
     background-attachment: initial;
     background-size: cover;
     background-position: center;
   }
 
-  .home__description{
+  .home__description {
     display: flex;
     flex-direction: column;
     width: 100%;
   }
-  .about__grid{
+  .about__grid {
     font-size: 14px;
   }
 
@@ -152,7 +147,6 @@
   }
 
   .section__subtitle {
-    
     font-size: 16px;
   }
 
@@ -186,11 +180,11 @@
     gap: 20px;
     font-size: 14px;
   }
-  
+
   .contact__grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-  .contact__item p{
+  .contact__item p {
     display: none;
   }
   .contact__item {
@@ -199,5 +193,3 @@
     transition: all 0.3s;
   }
 }
-
-
