--- a/styles.css
+++ b/styles.css
@@ -522,3 +522,14 @@ button:active {
 .map iframe {
   width: 100%;
 }
+
+.foto-grande {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
