--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,17 @@ section {
   z-index: 5;
 }
 
+.navbar2 {
+  position: fixed;
+  background: #000;
+  /*transition: background 0.3s;*/
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  width: 100%;
+  z-index: 5;
+}
+
 .navbar__logo {
   display: flex;
   align-items: center;
@@ -101,6 +112,19 @@ section {
   transition: color 0.3s;
 }
 
+.navbar__linkb {
+  padding-left: 20px;
+}
+
+.navbar__linkb a {
+  color: #000;
+  transition: color 0.3s;
+}
+
+.navbar__linkb a:hover {
+  color: #8e8e8e;
+  transition: color 0.3s;
+}
 .navbar__menu {
   display: none;
   align-items: center;
